# gencast

./: .gitignore  CLAUDE.md  README.md  TODO_PRESENTATION_FEATURE.md  __init__.py  gencast.py  podcast.txt  podcast_ai.py  pricing.json  pyproject.toml  requirements.txt
audiences/: academic.txt  beginner.txt  general.txt  technical.txt
prompts/: casual.txt  debate.txt  educational.txt  interview.txt  planning.txt
src/: audio.py  dialogue.py  logger.py  models.py  planning.py  utils.py
tests/: test_models.py
